--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -61,3 +61,6 @@ Interpolate=Interpolate between positions
 UnableToGetPathsFromService=Unable to get paths from service, please try again later
 MonitorEachSmartDriver=Monitor each SmartDriver
 RandomizeEachSmartDriver=Randomize behaviour
+InfiniteSimulation=Non-ending simulation
+Home=Home
+Workplace=Workplace
