KafkaProducer unique or per SmartDriver
Possibility to choose between a simulation in which all data sending is
carried out through one Kafka Producer or, being  faithful to reality,
every driver instances its own Kafka Producer.
In the latter case, it is consumed far more resources, so fewer drivers
could be simulated.

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -64,3 +64,4 @@ RandomizeEachSmartDriver=Randomize behaviour
 InfiniteSimulation=Non-ending simulation
 Home=Home
 Workplace=Workplace
+KafkaProducerPerSmartDriver=Producer per SmartDriver?
