--- a/src/main/resources/HermesSimulator.properties
+++ b/src/main/resources/HermesSimulator.properties
@@ -5,3 +5,5 @@ max.threads=30000
 max.simulation.time.ms=14400000
 # Simulator status sampling interval in seconds.
 status.sampling.interval.s=1
+# Ztreamy server URL.
+ztreamy.url=http://hermes1.gast.it.uc3m.es:9220/collector/publish
